# onto-spread-ed

./: .gitignore  CLAUDE.md  Makefile  OntologyDataStore.py  README.md  SpreadsheetSearcher.py  app.py  app.yaml  config.py  config.yaml  development.md  ose.code-workspace  package-lock.json  package.json  pnpm-workspace.yaml  pyproject.toml  requirements.txt  ruff.toml  set-version.sh  setup.cfg  tsconfig.json  tsconfig.old.json  vite.config.js
.github/workflows/: CI.yaml
database/: Base.py  User.py
guards/: verify_login.py
index/: BucketStorage.py  FileStorage.py  create_index.py
indexdir/: MAIN_e0ls6eozbujr4x27.seg  MAIN_n035o0qhh94hcsiu.seg  _MAIN_2.toc  _MAIN_4.toc
js/admin/: Dashboard.vue  main.ts
js/common/: Diagnostic.vue  bootbox.ts  constants.ts  debounce.ts  diagnostic-data.ts  filter.ts  model.ts  spreadsheetdata.ts  tabulator-extensions.ts  types.ts
js/editor/: Editor.vue  HistoryService.ts  Merger.vue  constants.ts  main.ts  server-vars.ts  tabulator-config.ts  test.ts
js/release/: ErrorLink.vue  Preparation.vue  ProgressIndicator.vue  Release.vue  ReleaseScriptViewer.vue  Setup.vue  TechnicalError.vue  main.ts  model.ts  preparation.ts  release.old.ts  release.ts
js/settings/: Settings.vue  main.ts
js/visualise/: Visualise.vue  graph-builder.ts  graph-filters.ts  graph-renderer.ts  main.ts
migrations/versions/: 244abfc3e657_rename_tables.py  487271aa555d_added_release_artifacts.py  5a12a34c96d8_added_release_repo.py  bbe766649a99_initial_migration.py
onto_spread_ed/: AppModule.py  OntologyDataStore.py  PermissionManager.py  SpreadsheetSearcher.py  __init__.py  app.py  config.py  custom_json.py  default_config.py  gh.py
onto_spread_ed/cli/: __init__.py  externals.py  release.py
onto_spread_ed/commands/: CLICommandContext.py  Command.py  ImportExternalCommand.py  ReleaseCommandContext.py
onto_spread_ed/database/: NextId.py  Release.py  User.py  __init__.py
onto_spread_ed/guards/: admin.py  verify_login.py  with_permission.py
onto_spread_ed/index/: ExtendedStorage.py  FileStorage.py  create_index.py  schema.py
onto_spread_ed/jinja_extensions/: __init__.py
onto_spread_ed/model/: ColumnMapping.py  Diff.py  ExcelOntology.py  Relation.py  ReleaseScript.py  RepositoryConfiguration.py  Result.py  Schema.py  Term.py  TermIdentifier.py
onto_spread_ed/release/: AddictOVocabReleaseStep.py  BCIOSearchReleaseStep.py  BuildReleaseStep.py  GenerateHierarchicalSpreadsheetReleaseStep.py  GithubPublishReleaseStep.py  HumanVerificationReleaseStep.py  ImportExternalReleaseStep.py  MergeReleaseStep.py  PreparationReleaseStep.py  ReleaseStep.py  ValidationReleaseStep.py  __init__.py  common.py  do_release.py
onto_spread_ed/routes/: __init__.py  admin.py  auth.py  edit.py  main.py  release.py  search.py  verify.py  visualize.py
onto_spread_ed/search_api/: APIClient.py  APIService.py  AddictOVocabClient.py  AddictOVocabService.py  BCIOSearchClient.py  BCIOSearchService.py
onto_spread_ed/services/: ConfigurationService.py  FileCache.py  LocalConfigurationService.py  OntoloyBuildService.py  RepositoryConfigurationService.py  RobotOntologyBuildService.py  validation.py
onto_spread_ed/static/: addicto.release.json  bcio.release.json  gmho.release.json  main.css  main.scss  release.ts  test.dot
onto_spread_ed/template_filters/: __init__.py  css_safe.py
onto_spread_ed/templates/: base.html  edit-old.html  edit.html  edit_external.html  forbidden.html  index.html  loggedout.html  repo.html  testgeneratedbyapi.html  visualise.html
onto_spread_ed/utils/: __init__.py  github.py
ose/: AppModule.py  OntologyDataStore.py  SpreadsheetSearcher.py  __init__.py  app.py  cli_wrapper.py  constants.py  custom_json.py  default_config.py  gh.py
ose/cli/: __init__.py  externals.py  release.py
ose/commands/: CLICommandContext.py  Command.py  CommandContext.py  ImportExternalCommand.py  ReleaseCommandContext.py
ose/database/: Release.py
ose/guards/: with_permission.py
ose/index/: BucketStorage.py  ExtendedStorage.py
plugins/: README.md
plugins/ose-plugin-addicto/: README.md  package-lock.json  package.json  pyproject.toml  tsconfig.app.json  vite.config.ts
plugins/ose-plugin-addicto/src/ose-plugin-addicto-js/: AddictOVocab.vue  index.ts
plugins/ose-plugin-addicto/src/ose_plugin_addicto/: AddictOVocabClient.py  AddictOVocabReleaseStep.py  AddictOVocabService.py  __init__.py  main.py
plugins/ose-plugin-addicto/src/ose_plugin_addicto/static/: ose-plugin-addicto.umd.cjs
plugins/ose-plugin-annotation-sheets/: README.md  pyproject.toml
plugins/ose-plugin-annotation-sheets/src/ose_plugin_annotation_sheets/: GenerateAnnotationSheetsReleaseStep.py  __init__.py
plugins/ose-plugin-bcio/: README.md  package-lock.json  package.json  pyproject.toml  vite.config.ts
plugins/ose-plugin-bcio/src/ose-plugin-bcio-js/: BCIOSearch.vue  index.ts
plugins/ose-plugin-bcio/src/ose_plugin_bcio/: BCIOSearchClient.py  BCIOSearchReleaseStep.py  BCIOSearchService.py  __init__.py
plugins/ose-plugin-bcio/src/ose_plugin_bcio/scripts/: cleanup_bcio_vocab.py  import_missing_externals.py  set_pre_proposed_curation_status.py
plugins/ose-plugin-bcio/src/ose_plugin_bcio/static/: ose-plugin-bcio.umd.cjs
plugins/ose-plugin-hbcp/: README.md  pyproject.toml
plugins/ose-plugin-hbcp/src/ose_plugin_hbcp/: __init__.py
plugins/ose-plugin-hbcp/src/ose_plugin_hbcp/search_api/: APIService.py
plugins/ose-plugin-hierarchical-spreadsheets/: README.md  pyproject.toml
plugins/ose-plugin-hierarchical-spreadsheets/src/ose_plugin_hierarchical_spreadsheets/: GenerateHierarchicalSpreadsheetReleaseStep.py  __init__.py
scripts/: cleanup-bcio-vocab.py  generate-shims.mjs  import-missing-externals.py  set-pre-proposed-curation-status.py  update-imports-to-latest-versions.py
static/: addicto-products.json  example.json  imageProps.json  mindmup-editabletable.js
templates/: access_show_visualisation_for_ids.html  base.html  edit.html  edit_external.html  index.html  repo.html  testgeneratedbyapi.html  visualise.html
tests/: excel_ontology.test.py
utils/: github.py
(+128 files in other folders)
