# Monorepo Workspace Configuration
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "onto-spread-ed-workspace"
description = "OntoSpreadEd - Ontology spreadsheet editor (monorepo workspace)"
requires-python = ">= 3.12"
version = "0.1.0"

# This is a workspace root - no packages are published from here
# Individual packages are in packages/ose-*

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "mypy",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests", "packages/*/tests"]

# This is a workspace root - no Python packages here
[tool.setuptools]
py-modules = []
packages = []

[tool.uv.sources]
ose-core = { workspace = true }

# Or with uv workspaces:
[tool.uv.workspace]
members = [
 "packages/*",
 "plugins/*",
]
exclude = [
    "packages/ose-js-*",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
