[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ose-plugin-annotation-sheets"
version = "1.4.0"
description = "OntoSpreadEd plugin for generating annotation sheet templates"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.6.1",
    "openpyxl>=3.1.0",
    "ose-core==1.4.0",
]

[project.entry-points.'ose.plugins']
annotation_sheets = "ose_plugin_annotation_sheets:AnnotationSheetsPlugin"

[tool.uv.sources]
ose-core = { workspace = true }

[tool.setuptools.packages.find]
where = ["src"]
