[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ose-plugin-bcio"
version = "0.2.5"
description = "Plugin for BCIO services and workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ose-core==0.2.5",
    "ose-plugin-hbcp==0.2.5",
    "GitHub-Flask",
    "Flask-SQLAlchemy==3.1.1",
]

[project.entry-points.'ose.plugins']
bcio = "ose_plugin_bcio:BCIOPlugin"

[tool.uv.sources]
ose-core = { workspace = true }
ose-plugin-hbcp = { workspace = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ose_plugin_bcio = ["static/*"]
