[project]
name = "ose-plugin-hbcp"
version = "1.3.2"
description = "OntoSpreadEd plugin for HBCP common services"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ose-core==1.3.2",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
ose-core = { workspace = true }

[tool.setuptools.packages.find]
where = ["src"]
