[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ose-plugin-hierarchical-spreadsheets"
version = "0.1.0"
description = "OntoSpreadEd plugin for hierarchical spreadsheet generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ose-core",
]

[project.entry-points.'ose.plugins']
hierarchical_spreadsheets = "ose_plugin_hierarchical_spreadsheets:HierarchicalSpreadsheetsPlugin"

[tool.uv.sources]
ose-core = { workspace = true }

[tool.setuptools.packages.find]
where = ["src"]

