[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ose-plugin-hierarchical-spreadsheets"
version = "1.3.2"
description = "OntoSpreadEd plugin for hierarchical spreadsheet generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.6.1",
    "ose-core==1.3.2",
    "scipy>=1.17.0",
]

[project.entry-points.'ose.plugins']
hierarchical_spreadsheets = "ose_plugin_hierarchical_spreadsheets:HierarchicalSpreadsheetsPlugin"

[tool.uv.sources]
ose-core = { workspace = true }

[tool.setuptools.packages.find]
where = ["src"]

